Add Security to swagger doc - (Task #812)
- Added securityDefinitions.json that is included in the pom
- Add annotation @Authorization to resources
- Generate doc

---
Task #812: Activate Server authentication
